src/css/quasar.variables.scss
// Quasar SCSS (& Sass) Variables
// --------------------------------------------------
// To customize the look and feel of this app, you can override
// the Sass/SCSS variables found in Quasar's source Sass/SCSS files.

// Check documentation for full list of Quasar variables

// Your own variables (that are declared here) and Quasar's own
// ones will be available out of the box in your .vue/.scss/.sass files

// It's highly recommended to change the default colors
// to match your app's branding.
// Tip: Use the "Theme Builder" on Quasar's documentation website.

$primary: #1f2937;
$secondary: #e69e3b;
$accent: #31316a;

$dark: #111827;

$positive: #10b981;
$negative: #e11d48;
$info: #2361ce;
$warning: #fba918;

.body--light {
  .bg-surface {
    background-color: #eeeeee !important;
    .q-field__control {
      background-color: #ffffff !important;
    }
  }
}

.body--dark {
  .q-radio__inner,
  .q-tab--active .q-tab__label,
  .q-field--highlighted .q-field__label {
    color: #fff !important;
  }

  .ais-Stats-text {
    color: #ffffffcc !important;
  }
}

